// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Field Component] renders Default without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <label
        class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-field__label"
      >
        Label
      </label>
      <span
        class="rcx-box rcx-box--full rcx-field__description"
      >
        Description
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <div
          class="rcx-box rcx-box--full rcx-skeleton__input"
        >
          <span
            class="rcx-box rcx-box--full rcx-skeleton--text rcx-skeleton rcx-css-1qcz93u"
          />
        </div>
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error"
      >
        Error
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__hint"
      >
        Hint
      </span>
    </div>
  </div>
</body>
`;

exports[`[Field Component] renders RequiredWithLabelInfo without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <label
        class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-field__label"
        for="label-required-id"
      >
        Label
        <span
          class="rcx-box rcx-box--full rcx-label__info rcx-css-1eogw2f"
        >
          <span
            hidden=""
            id="required-info-id"
          >
            this is a info label
          </span>
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
            title="this is a info label"
          >
            
          </i>
        </span>
        <span
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-label__required rcx-css-b7g1a9"
        >
          *
        </span>
      </label>
      <span
        class="rcx-box rcx-box--full rcx-field__description"
      >
        Description
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <input
          aria-describedby="required-info-id"
          class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-text rcx-input-box"
          id="label-required-id"
          size="1"
          type="text"
        />
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error"
      >
        Error
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__hint"
      >
        Hint
      </span>
    </div>
  </div>
</body>
`;

exports[`[Field Component] renders WithCheckBox without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <label
          class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-check-box"
        >
          <input
            class="rcx-box rcx-box--full rcx-check-box__input"
            id="check-box"
            type="checkbox"
          />
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-check-box__fake"
          />
        </label>
        <label
          class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-field__label"
          for="check-box"
        >
          Label
        </label>
      </span>
    </div>
  </div>
</body>
`;

exports[`[Field Component] renders WithDescription without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <label
        class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-field__label"
      >
        Label
      </label>
      <span
        class="rcx-box rcx-box--full rcx-field__description"
      >
        Descriptions should add useful and relevant additional information about what is required of the user for the related input. Its content is strictly composed by plain text.
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <div
          class="rcx-box rcx-box--full rcx-skeleton__input"
        >
          <span
            class="rcx-box rcx-box--full rcx-skeleton--text rcx-skeleton rcx-css-1qcz93u"
          />
        </div>
      </span>
    </div>
  </div>
</body>
`;

exports[`[Field Component] renders WithError without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <label
        class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-field__label"
      >
        Label
      </label>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <div
          class="rcx-box rcx-box--full rcx-skeleton__input"
        >
          <span
            class="rcx-box rcx-box--full rcx-skeleton--text rcx-skeleton rcx-css-1qcz93u"
          />
        </div>
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error"
      >
        Error text appears when the user has inputted an invalid response to a field and let's the user know exactly what the issue is, so as to let them remedy the error as easily as possible.
      </span>
    </div>
  </div>
</body>
`;

exports[`[Field Component] renders WithHint without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <label
        class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-field__label"
      >
        Label
      </label>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <div
          class="rcx-box rcx-box--full rcx-skeleton__input"
        >
          <span
            class="rcx-box rcx-box--full rcx-skeleton--text rcx-skeleton rcx-css-1qcz93u"
          />
        </div>
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__hint"
      >
        Hint fields help by explaining technical terms or concepts related to third-party apps and integrations.
      </span>
    </div>
  </div>
</body>
`;

exports[`[Field Component] renders WithHintAndError without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <label
        class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-field__label"
      >
        Label
      </label>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <div
          class="rcx-box rcx-box--full rcx-skeleton__input"
        >
          <span
            class="rcx-box rcx-box--full rcx-skeleton--text rcx-skeleton rcx-css-1qcz93u"
          />
        </div>
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error"
      >
        Error must be above.
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__hint"
      >
        Hint must be below.
      </span>
    </div>
  </div>
</body>
`;

exports[`[Field Component] renders WithHintAndLink without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <label
        class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-field__label"
      >
        Label
      </label>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <div
          class="rcx-box rcx-box--full rcx-skeleton__input"
        >
          <span
            class="rcx-box rcx-box--full rcx-skeleton--text rcx-skeleton rcx-css-1qcz93u"
          />
        </div>
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row rcx-css-rzpqmp"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__hint"
        >
          Same line as Link in the left
        </span>
        <a
          class="rcx-box rcx-box--full rcx-field__link"
          href="#"
          target="_blank"
        >
          Same line as Hint in the right
        </a>
      </span>
    </div>
  </div>
</body>
`;

exports[`[Field Component] renders WithLabelInfo without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <label
        class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-field__label"
        for="label-info-id"
      >
        Label
        <span
          class="rcx-box rcx-box--full rcx-label__info rcx-css-1eogw2f"
        >
          <span
            hidden=""
            id="info-id"
          >
            this is a info label
          </span>
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
            title="this is a info label"
          >
            
          </i>
        </span>
      </label>
      <span
        class="rcx-box rcx-box--full rcx-field__description"
      >
        Description
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <input
          aria-describedby="info-id"
          class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-text rcx-input-box"
          id="label-info-id"
          size="1"
          type="text"
        />
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error"
      >
        Error
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__hint"
      >
        Hint
      </span>
    </div>
  </div>
</body>
`;

exports[`[Field Component] renders WithLink without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <label
        class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-field__label"
      >
        Label
      </label>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <div
          class="rcx-box rcx-box--full rcx-skeleton__input"
        >
          <span
            class="rcx-box rcx-box--full rcx-skeleton--text rcx-skeleton rcx-css-1qcz93u"
          />
        </div>
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row rcx-css-17mu816"
      >
        <a
          class="rcx-box rcx-box--full rcx-field__link"
          href="#"
          target="_blank"
        >
          Link is used for external resources or documentation.
        </a>
      </span>
    </div>
  </div>
</body>
`;

exports[`[Field Component] renders WithToggleSwitch without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <label
          class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-toggle-switch"
        >
          <input
            class="rcx-box rcx-box--full rcx-toggle-switch__input"
            id="toggle-switch"
            type="checkbox"
          />
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-toggle-switch__fake"
          />
        </label>
        <label
          class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-field__label"
          for="toggle-switch"
        >
          Label
        </label>
      </span>
    </div>
  </div>
</body>
`;
